# fontsubset

./: .gitignore  Cargo.toml  README.en.md  README.md  build-console.bat  build-gui.bat
.github/workflows/: build-cake.yml  ci.yml  release.yml
Bundle/Contents/: Info.plist
fontsubset-console/: fontsubset-console.csproj
fontsubset-gui/: MainWindow.axaml  Program.cs  fontsubset-gui.csproj
legacy/: README.md  build-console.bat  build-gui.bat
legacy/.config/: dotnet-tools.json
legacy/.github/workflows/: create-release.yml
legacy/src/: fontsubset.sln
legacy/src/fontsubset-console/: Program.cs
legacy/src/fontsubset-gui/: App.axaml  App.axaml.cs  Program.cs  fontsubset-gui.csproj
legacy/src/sfntly/: sfntly.csproj
legacy/src/sfntly/Ext/: CollectionExt.cs
legacy/src/sfntly/Subsetter/: SubsetterResult.cs
packaging/macos/: Info.plist
sfntly/: sfntly.csproj
sfntly/com/google/typography/font/sfntly/: Tag.cs
sfntly/com/google/typography/font/sfntly/data/: GrowableMemoryByteArray.cs  MemoryByteArray.cs  WritableFontData.cs
sfntly/com/google/typography/font/sfntly/math/: Fixed1616.cs
sfntly/com/google/typography/font/sfntly/sample/sfview/: TaggedData.java
sfntly/com/google/typography/font/sfntly/table/: ByteArrayTableBuilder.cs  GenericTableBuilder.cs  TableBasedTableBuilder.cs
sfntly/com/google/typography/font/tools/subsetter/: CMapTableSubsetter.cs  GlyphRenumberer.cs
src/fontsubset-console/: Cargo.toml  Program.cs  fontsubset-console.csproj
src/fontsubset-console/src/: main.rs
src/fontsubset-core/: Cargo.toml
src/fontsubset-core/src/: harfbuzz.rs  lib.rs
src/fontsubset-gui/: Cargo.toml  MainWindow.axaml  MainWindow.axaml.cs  app.manifest  fontsubset-gui.csproj
src/fontsubset-gui/src/: app.rs  i18n.rs  main.rs
src/harfbuzz-subset-sys/: Cargo.toml  build.rs
src/harfbuzz-subset-sys/src/: lib.rs
src/sfntly/: SubsetterUtil.cs  sfntly.csproj
src/sfntly/Subsetter/: SubsetterUtil.cs
src/sfntly/com/google/typography/font/sfntly/: Font.cs  FontFactory.cs
(+187 files in other folders)
