[package]
name = "fontsubset-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPUI frontend for fontsubset-core"

[[bin]]
name = "fontsubset-gui"
path = "src/main.rs"
test = false

[dependencies]
fontsubset-core = { path = "../fontsubset-core" }
parking_lot.workspace = true
rfd.workspace = true
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
